Add working refresh token logic